add theme and cms

--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -1,6 +1,11 @@
 // https://github.com/twbs/bootstrap/blob/v5.2.3/scss/_variables.scss
 
-$primary: #A90940
+$primary: #092036
+$secondary: #FFC215
+
+//Theme variables
+$header-background-color: #092036 
+$header-color: #FFC215
 
 // Alert
 $alert-link-font-weight: normal
@@ -23,7 +28,16 @@ $btn-padding-y: .75rem
 $btn-padding-x:  1rem
 
 // Font
+$font-weight-normal: 400
+$font-weight-bold: 600
+$headings-font-family: Roboto, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$headings-font-weight: $font-weight-bold
 $headings-margin-bottom: 1rem
+$h1-font-size: 5rem
+$h2-font-size: 3rem
+$h3-font-size: 2rem
+$h4-font-size: 1.5rem
+$h5-font-size: 1.25rem
 $small-font-size: .875rem
 
 $hr-margin-y: 2.8rem
@@ -32,3 +46,7 @@ $hr-margin-y: 2.8rem
 $pagination-padding-y: .5rem
 $pagination-padding-x: .75rem
 $pagination-disabled-bg: transparent
+
+
+$global-spacing: 4rem
+$header-background-color: $primary
